--- a/YoutubePlaylistDownloader/App.xaml
+++ b/YoutubePlaylistDownloader/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YoutubePlaylistDownloader"
-             StartupUri="Skeleton.xaml">
+             StartupUri="/Forms/Skeleton.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
