--- a/YoutubePlaylistDownloader/Languages/Español.xaml
+++ b/YoutubePlaylistDownloader/Languages/Español.xaml
@@ -43,10 +43,10 @@
     <s:String x:Key="Prefer">Prefiero videos con una resolución de </s:String>
     <s:String x:Key="AreYouSureExit">¿Estás seguro de que quieres salir?</s:String>
     <s:String x:Key="TotalVideos">Total de videos: </s:String>
-    <s:String x:Key="AboutTheProgram">Este programa fue desarrollado por shaked6540 y su uso es completamente gratuito sin ninguna limitación.
+    <s:String x:Key="AboutTheProgram">Este programa fue desarrollado por dardizzola y su uso es completamente gratuito sin ninguna limitación.
 Sin embargo, no soy responsable por cualquier problema legal que este programa pudiera causarte, hasta donde sé, YouTube no permite descargar videos desde su sitio web.
 
-El código completo de este programa lo puedes encontrar en https://github.com/shaked6540/YoutubePlaylistDownloader .
+El código completo de este programa lo puedes encontrar en https://github.com/dardizzola/YoutubePlaylistDownloader .
 
 El instalador fue hecho usando Inno Setup (http://www.jrsoftware.org/isinfo.php)
 
@@ -58,7 +58,7 @@ YouTube Playlist Downloader v</s:String>
 Esto es lo nuevo que hay: </s:String>
     <s:String x:Key="DownloadingUpdateSetup">Actualmente descargando: Archivos para la actualización</s:String>
     <s:String x:Key="UpdateCancelled">La actualización ha sido cancelada.</s:String>
-    <s:String x:Key="ErrorWhileUpdating">Ocurrió un error durante la descarga, asegurate de estar conectado a internet. Si tienes conexión a internet intenta la descarga mas tarde o visita https://github.com/shaked6540/YoutubePlaylistDownloader/issues para comprobar si existe algún problema con el servidor de descargas.</s:String>
+    <s:String x:Key="ErrorWhileUpdating">Ocurrió un error durante la descarga, asegurate de estar conectado a internet. Si tienes conexión a internet intenta la descarga mas tarde o visita https://github.com/dardizzola/YoutubePlaylistDownloader/issues para comprobar si existe algún problema con el servidor de descargas.</s:String>
     <s:String x:Key="UpdateComplete">Descarga completa.</s:String>
     <s:String x:Key="UpdateWhenIExit">Actualizar al salir</s:String>
     <s:String x:Key="UpdateAndExit">Cerrar y actualizar ahora</s:String>
@@ -100,11 +100,11 @@ Para acceder a los ajustes de una suscripción, selecciona 'Suscripciones' en el
 Te recordamos que si la aplicación no se encuentra en ejecución, no se descargarán videos nuevos.
     </s:String>
     <s:String x:Key="ContactTheDeveloper">Contacto</s:String>
-    <s:String x:Key="ContactTheDeveloperHelp">Hay varias maneras de contactarme (shaked6540):
+    <s:String x:Key="ContactTheDeveloperHelp">Hay varias maneras de contactarme (dardizzola):
 
-La primera es en Reddit, solo enviame un mensaje en Reddit y respondere en cuanto pueda, este es mi perfil https://www.reddit.com/user/shaked6540/
+La primera es en Reddit, solo enviame un mensaje en Reddit y respondere en cuanto pueda, este es mi perfil https://www.reddit.com/user/dardizzola/
 
-La tercera manera de contactarme es a través de Github, simplemente abre un nuevo issue e intentare responder lo mas rápido posible, aqui esta el link: https://github.com/shaked6540/YoutubePlaylistDownloader/issues</s:String>
+La tercera manera de contactarme es a través de Github, simplemente abre un nuevo issue e intentare responder lo mas rápido posible, aqui esta el link: https://github.com/dardizzola/YoutubePlaylistDownloader/issues</s:String>
     <s:String x:Key="AutomaticallyCheckForUpdates">Buscar actualizaciones automáticamente cuando inicia la aplicación</s:String>
     <s:String x:Key="WhatsNew">¿Qué hay de nuevo?</s:String>
     <s:String x:Key="SubscriptionsUpdateDelay">Actualizar suscripciones cada</s:String>
