--- a/YoutubePlaylistDownloader/Languages/العربية.xaml
+++ b/YoutubePlaylistDownloader/Languages/العربية.xaml
@@ -43,10 +43,10 @@
     <s:String x:Key="Prefer">:تفضل مقاطع الفيديو بدقة </s:String>
     <s:String x:Key="AreYouSureExit">:هل انت متاكد من الخروج </s:String>
     <s:String x:Key="TotalVideos">:عدد مقاطع الفيديو </s:String>
-    <s:String x:Key="AboutTheProgram">This program was developed by shaked6540 and it is completely free to use without limitation.
+    <s:String x:Key="AboutTheProgram">This program was developed by dardizzola and it is completely free to use without limitation.
 However, I am not responsible for any legal trouble that this program will cause you, 
 as far as I know, YouTube does not permit downloading videos from their website. 
-The full source code for this program can be found at https://github.com/shaked6540/YoutubePlaylistDownloader
+The full source code for this program can be found at https://github.com/dardizzola/YoutubePlaylistDownloader
         
 The installer was made using Inno Setup (http://www.jrsoftware.org/isinfo.php)
     
@@ -59,7 +59,7 @@ YouTube Playlist Downloader v</s:String>
     <s:String x:Key="DownloadingUpdateSetup">يتم التنزيل حالياٌ: تحديث الإعداد </s:String>
     <s:String x:Key="UpdateCancelled">تم الغاء التحديث </s:String>
     <s:String x:Key="ErrorWhileUpdating">An error has occured while downloading the update setup, make sure you're connected to the internet
-if you are connected to the internet, try downloading a later time or visit https://github.com/shaked6540/YoutubePlaylistDownloader/issues to see if theres an issue with the download server</s:String>
+if you are connected to the internet, try downloading a later time or visit https://github.com/dardizzola/YoutubePlaylistDownloader/issues to see if theres an issue with the download server</s:String>
     <s:String x:Key="UpdateComplete">.اكتمل التحميل </s:String>
     <s:String x:Key="UpdateWhenIExit">التحديث عند الاغلاق</s:String>
     <s:String x:Key="UpdateAndExit">الخروج والتحديث الان</s:String>
@@ -100,11 +100,11 @@ if you are connected to the internet, try downloading a later time or visit http
 يرجى ملاحظة أنه إذا لم يكن البرنامج قيد التشغيل ، فلن يتم تنزيل مقاطع الفيديو الجديدة
     </s:String>
     <s:String x:Key="ContactTheDeveloper">التواصل</s:String>
-    <s:String x:Key="ContactTheDeveloperHelp">هناك عدة طرق للتواصل معي (shaked6540): 
+    <s:String x:Key="ContactTheDeveloperHelp">هناك عدة طرق للتواصل معي (dardizzola): 
         
-The first one is Reddit, simply send me a message on Reddit and I will respond as soon as I can, this is my profile link: https://www.reddit.com/user/shaked6540/
+The first one is Reddit, simply send me a message on Reddit and I will respond as soon as I can, this is my profile link: https://www.reddit.com/user/dardizzola/
 
-The second way to contact me is through GitHub, simply open a new issue and I will try to respond as soon as possible, here is a link: https://github.com/shaked6540/YoutubePlaylistDownloader/issues</s:String>
+The second way to contact me is through GitHub, simply open a new issue and I will try to respond as soon as possible, here is a link: https://github.com/dardizzola/YoutubePlaylistDownloader/issues</s:String>
     <s:String x:Key="AutomaticallyCheckForUpdates">Automatically check for updates when I start the program</s:String>
     <s:String x:Key="WhatsNew">ما الجديد ؟</s:String>
     <s:String x:Key="SubscriptionsUpdateDelay">تحديث الاشتراكات كل</s:String>
