--- a/YoutubePlaylistDownloader/Languages/LanguagesList.xaml
+++ b/YoutubePlaylistDownloader/Languages/LanguagesList.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:s="clr-namespace:System;assembly=mscorlib">
-    <s:String x:Key="LanguageList">English;中文;Italiano;עברית;Polski;Português (BR);Türkçe;Español;Deutsch;Français;العربية;Русский</s:String>
+    <!--<s:String x:Key="CompleteLanguageList">English;中文;Italiano;עברית;Polski;Português (BR);Türkçe;Español;Deutsch;Français;العربية;Русский</s:String>-->
+    <s:String x:Key="LanguageList">English;Italiano;Español;</s:String>
 </ResourceDictionary>
